--- a/index.html
+++ b/index.html
@@ -2,18 +2,15 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Jasperdeveer - side projects</title>
+  <title>JSPR - SIDE PRJCTS</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 <link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
-<!-- partial:index.partial.html -->
-<div id="gif-wrap"></div>
-<div id="gif-logo"><img src="https://storage.googleapis.com/chydlx/codepen/random-gif-generator/giphy-logo.gif"/></div>
-<button id="new-gif">Random Gif</button>
-<!-- partial -->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script><script  src="./script.js"></script>
+  <ul>
+    <li><a href="rndmgif.html">Random Gif</a></li>
+  </ul>
 
 </body>
 </html>
